smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/use/conflicting-shape-def.smithy
// Shape name `String` conflicts with imported shape `smithy.api#String`
namespace smithy.example

use smithy.api#String

string String
